# inference-latency-study

./: .gitignore  AGENTS.md  Makefile  README.md  pyproject.toml  requirements.txt
analysis/: __init__.py  aggregate.py
bench/: __init__.py  cli.py  preflight.py  runner.py  schema.py  token_budget.py
bench/backends/: __init__.py  base.py  openai_compat.py
bench/infra/: vllm_server.py
bench/payloads/: __init__.py  builders.py  synthetic_image.py  synthetic_text.py
bench/scenarios/: model_scale.yaml
configs/: image_history.yaml  image_resolution.yaml  modality.yaml  screenspot_payload_buckets.yaml
data/: capture.py  dataset.py  payloads.py  prepare.py  screenspot.py  token_budget.py
results/raw/: dense_scale_qwen3_vl_2b_local.jsonl  dense_scale_qwen3_vl_4b_local.jsonl  dense_scale_qwen3_vl_8b_local.jsonl  dense_vs_moe_qwen3_vl_30b_a3b_moe_local.jsonl  dense_vs_moe_qwen3_vl_32b_dense_local.jsonl  image_local_h1.jsonl  image_local_h4.jsonl  image_remote_h1.jsonl  image_remote_h4.jsonl  screenshot_history_full_local.jsonl  screenshot_history_full_us_ca_2.jsonl  screenshot_history_full_us_mo_1.jsonl  screenshot_history_omit_past_local.jsonl  screenshot_history_omit_past_us_ca_2.jsonl  screenshot_history_omit_past_us_mo_1.jsonl
results/summaries/: dense_scale_qwen3_vl_2b_local.csv  dense_scale_qwen3_vl_4b_local.csv  dense_scale_qwen3_vl_8b_local.csv  image_local_h1.csv  (+11 more)
scripts/: Makefile  aggregate.py  run.py  smoke_remote.py  wait_for_vllm.py
server/: client.py  runner.py  schema.py  vllm.py
study/: aggregate.py  capture.py  plot.py  run.py
(+22 files in other folders)
